syntax = "proto3";

option go_package = ".";


message KeyValuePair{

    int64 key = 1;
    string value = 2;
}

message DataBlock{
    repeated KeyValuePair data = 1;
}

message IndexEntry{
    int64 Offset = 1;
    int64 MinKey = 2;
}

message IndexBlock{
    repeated IndexEntry index = 1;
}

message MetaDataBlock{
    int64 MinKey = 1;
    int64 MaxKey = 2;
}

message BloomFilter{
    repeated bool bitset = 1;
    int64 size = 2;
}




